# quickscope

./: .gitignore  README.md  requirements.txt  setup.cfg  stub_tracker.py  tracker.py
fake/: forward_ports.sh  game.json  hosts.txt  orga.py  services.txt  stub_tracker.py  submission.py
fake/exploits/: service_1.py  service_2.py  service_3.py  service_4.py  service_5.py
fake/orga/: Dockerfile  deploy_game.sh  orga.py  orga.yaml  services.txt  teams.txt
fake/teams/: Dockerfile  deploy_teams.sh  forward_ports.sh  get_pods.sh  local_ips.txt  service.py  supervisord.conf  team.yaml
quickscope/: __init__.py  __main__.py  common.py  shooter.py  statuspage.py  tracker.py
tests/: script_basic.py  test.py  test_ignore.py
tests/corpora/ignores/: .shooterignore  c.b
