[metadata]
name = quickscope
version = attr: quickscope.__version__
url = https://github.com/shellphish/quickscope
license = zlib
license_files = LICENSE
description = A lightweight and scalable A/D CTF exploit shooter
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    nclib >= 1.0.3
    psutil
    dataclasses-json
    ipython

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    quickscope = quickscope.shooter:main
